apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: n8n-ui
      protocol: TCP
      port: 80
      targetPort: 5678
