apps/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
spec:
  rules:
    - host: n8n.localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: n8n-service
              port:
                number: 80
